force-app/main/default/objects/Integration_Log_Error__c/Integration_Log_Error__c.object-meta.xml
<CustomObject>
    <label>Integration Log Error</label>
    <nameField>
        <label>Integration Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Log Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>