force-app/main/default/objects/Integration_Log_Error__c/fields/getCause__c.field-meta.xml
<CustomField>
    <fullName>getCause__c</fullName>
    <label>getCause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>