force-app/main/default/objects/Integration_Log_Error__c/fields/getMessage__c.field-meta.xml
<CustomField>
    <fullName>getMessage__c</fullName>
    <label>getMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>