force-app/main/default/objects/Integration_Log_Error__c/fields/getStackTraceString__c.field-meta.xml
<CustomField>
    <fullName>getStackTraceString__c</fullName>
    <label>getStackTraceString</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>